--- a/src2/nbproject/project.properties
+++ b/src2/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/src2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.classes12.jar=../src/Main/classes12.jar
 file.reference.GeckoXpress-src=../src
+file.reference.ojdbc8.jar=/Users/jingweizhang/Documents/ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.classes12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Hunter
+main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
